--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/patchu/obj-array-table#readme",
   "dependencies": {
     "dateformat-nodep": "^1.0.0",
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "numeral": "^2.0.6"
   }
 }
