--- a/package.json
+++ b/package.json
@@ -24,7 +24,18 @@
   "homepage": "https://github.com/patchu/obj-array-table#readme",
   "dependencies": {
     "dateformat-nodep": "^1.0.0",
-    "lodash": "^4.17.20",
+    "lodash.concat": "^4.5.0",
+    "lodash.fill": "^3.4.0",
+    "lodash.foreach": "^4.5.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.keys": "^4.2.0",
+    "lodash.map": "^4.6.0",
+    "lodash.split": "^4.4.2",
+    "lodash.startswith": "^4.2.1",
+    "lodash.trim": "^4.5.1",
+    "lodash.trimend": "^4.5.1",
     "numeral": "^2.0.6"
   }
 }
